--- a/templates/campaign/edit.html.twig
+++ b/templates/campaign/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('campaign/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_campaign_index') }}">back to list</a>
+    <a href="{{ path('app_campaign_index') }}"class="btn">back to list</a>
 
     {{ include('campaign/_delete_form.html.twig') }}
 {% endblock %}
