--- a/templates/campaign/payment.html.twig
+++ b/templates/campaign/payment.html.twig
@@ -14,7 +14,7 @@
                 </div>
             </div>
         </div>
-        <div class="parallax"><img src="assets/images/8.jpg" alt="Titre de la campagne"></div>
+        <div class="parallax"><img src="{{asset('assets/images/8.jpg')}}" alt="Titre de la campagne"></div>
     </div>
 
     <div class="container">
