--- a/templates/campaign/show.html.twig
+++ b/templates/campaign/show.html.twig
@@ -38,9 +38,136 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_campaign_index') }}">back to list</a>
+    <a href="{{ path('app_campaign_index') }}" class="btn">back to list</a>
 
-    <a href="{{ path('app_campaign_edit', {'id': campaign.id}) }}">edit</a>
+    <a href="{{ path('app_campaign_edit', {'id': campaign.id}) }}" class="btn">edit</a>
 
     {{ include('campaign/_delete_form.html.twig') }}
+    
+    {{include('participant/show.html.twig')}}
+    <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <h1 class="header center white-text light">{{ campaign.title }}</h1>
+                <div class="row center">
+                    <h5 class="header col s12 light">- Organisée par : {{campaign.name}} -</h5>
+                </div>
+            </div>
+        </div>
+        <div class="parallax"><img src="{{asset('assets/images/8.jpg')}}" alt="Titre de la campagne"></div>
+    </div>
+
+    <!-- Show progress -->
+    <section class="progress-section">
+        <div class="progress">
+            <div class="determinate" style="width: 70%"><span>70% de l'objectif</span></div>
+        </div>
+    </section>
+
+    <div class="container participe">
+        <div class="section">
+            <!-- Participation section -->
+            <div class="row">
+                <div class="card col s12 m12 l8 offset-l2">
+                    <div class="card-content">
+                        <div class="input-field col s12 l6">
+
+                       <form action="{{ path('app_payment', {id: campaign.id}) }}" method="get">
+                            <input id="amount" type="number" class="validate" name="amount">
+                            <label for="amount">Votre participation</label>
+                            <button type="submit" class="btn-large waves-effect waves-light pink lighten-1 col s12 l6">Participer</button>
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 center">
+                    <h4>A propos de la campagne</h4>
+                </div>
+            </div>
+            <!--   Icon Section   -->
+            <div class="row">
+                <div class="col s12 m6 l3 offset-l3">
+                    <div class="icon-block center">
+                        <div class="btn-large btn-floating white"><i class="material-icons teal-text">person</i></div>
+                        <h3 class="center">{{ campaign.id }}</h3>
+                        <p class="light">Participants</p>
+                    </div>
+                </div>
+
+                <div class="col s12 m6 l3">
+                    <div class="icon-block center">
+                        <div class="btn-large btn-floating white"><i class="material-icons teal-text">redeem</i></div>
+                        <h3 class="center">220</h3>
+                        <p class="light">euros récoltés</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Form section -->
+            <div class="row">
+                <form>
+                    <div class="input-field col s12">
+                        <label for="description">Description</label>
+                        <textarea id="description" class="materialize-textarea" readonly="readonly">{{ campaign.content }}</textarea>
+                    </div>
+                    <div class="input-field col s12 l6">
+                        <input id="goal" type="number" readonly="readonly" value="500">
+                        <label for="goal">Objectif</label>
+                    </div>
+                    <div class="col s12 l6 offset-l3">
+                        <button class="btn btn-large waves-effect waves-light col s12" type="submit" name="action">
+                            Modifiez la campagne
+                            <i class="material-icons right">edit</i>
+                        </button>
+                    </div>
+                </form>
+            </div>
+            <!-- List -->
+            <div class="row">
+                <div class="col s12 center">
+                    <h4>Liste des participants</h4>
+                </div>
+                <div class="col s12">
+                    <table class="highlight responsive-table">
+                        <thead>
+    
+
+                        <tr>
+                            <th>Email</th>
+                            <th>Participation</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                            {% for participant in participants %}
+                        <tr>
+                            <td>{{participant.name}}</td>
+                           
+                            <td>{{participant.id}}</td>
+                        </tr>
+                            {% endfor %}
+                    
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="parallax-container valign-wrapper">
+        <div class="section no-pad-bot">
+            <div class="container">
+                <div class="row center">
+                    <h4 class="header col s12 light">Une campagne pensée pour vous<br>et pour toutes les occasions</h4>
+                </div>
+            </div>
+        </div>
+        <div class="parallax"><img src="assets/images/10.jpg" alt="Une campagne pensée pour vous"></div>
+    </div>
+
+
+    
+
 {% endblock %}
